<resources>
    <string name="app_name">Resfeber</string>
    <string name="login">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="googleSignIn">Continue with Google</string>
    <string name="facebook_app_id">220473722620434</string>
    <string name="fb_login_protocol_scheme">fb220473722620434</string>
    <string name="username">Email:</string>
    <string name="pass">Password</string>
    <string name="myEvents">My events</string>
    <string name="explore">Explore</string>
    <string name="menu">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="slogan">Before the journey begins</string>
    <string name="profile">Welcome to your profile!</string>
    <string name="currentLocation">Current Location:</string>
    <string name="logOut">Log Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="filter">Filters</string>
    <string name="title">Title Event</string>
    <string name="info">Information Event</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="bilet">Ticket</string>
    <string name="initialQuantity">0</string>
    <string name="buy">&#x20;Buy Ticket&#x20;</string>
    <string name="datePicker">Pick a Date</string>
    <string name="url">Url Details</string>
    <string name="ticket"><u>Ticket(s) Here</u></string>
    <string name="ticketBought">Ticket bought</string>
    <string name="notNetwork">You need to be connected to a network</string>
    <string name="emailRequired">Email is Required!</string>
    <string name="passRequired">Password is Required!</string>
    <string name="loginSucc">Log in Successfully!</string>
    <string name="error">Error!&#x20;</string>
    <string name="passLength">Password need to be longer than 6 characters.</string>
    <string name="userCreated">User Created</string>
    <string name="noOfTickets">Number of Tickets:&#x20;</string>
    <string name="tryAgain">Please, try again!</string>
    <string name="ok">OK</string>
    <string name="titleFilter">Title Default</string>
    <string name="description">Description:&#x20;</string>
    <string name="urlEvent">Url Event:&#x20;</string>
    <string name="minimQuantity">You should buy more than 0 tickets.</string>
    <string name="apply">Apply</string>
    <string name="startDate">Start Date:&#x20;</string>
    <string name="duration">Duration:&#x20;</string>
    <string name="unknown">Location Unknown. Please turn on your location provider.</string>
    <string name="gps_network_not_enabled">Your Location is OFF</string>
    <string name="open_location_settings">Activate Location</string>
    <string name="cancel">Cancel</string>
    <string name="NoTickets">No tickets available.</string>
    <string name="click"><u>Click Here</u></string>
    <string name="price">Price per ticket:</string>
    <string name="total">Total:</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="editProfile">Edit Profile</string>
    <string name="saveProfile">Save Profile</string>
    <string name="edited">Profile Edited!</string>
    <string name="defaultPrice">25 USD</string>
    <string name="defaultValue">25</string>
    <string name="defaultCurrency">USD</string>
    <string name="tickets">Your ticket(s):&#x20;</string>

</resources>